[gd_scene load_steps=6 format=3 uid="uid://7ps155gax7qy"]

[ext_resource type="Theme" uid="uid://nkt57yku5n0s" path="res://Assets/UI/Resources/Themes/tablet_theme.tres" id="1_2lt2n"]
[ext_resource type="Script" path="res://Assets/UI/Player Stat/playerstat_ui.gd" id="1_h1c4b"]
[ext_resource type="Theme" uid="uid://bebm2mefdi5x0" path="res://Assets/UI/Resources/Themes/red_progressbar.tres" id="3_j2pj4"]
[ext_resource type="Theme" uid="uid://bppmy05s882g4" path="res://Assets/UI/Resources/Themes/blue_progressbar.tres" id="4_sjopv"]
[ext_resource type="StyleBox" uid="uid://cpc8efrj6ymh3" path="res://Assets/UI/Resources/Themes/Panel_border.tres" id="5_bbnp8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1c4b")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Margin" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="UI" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Margin/UI"]
layout_mode = 2
theme = ExtResource("1_2lt2n")
theme_override_colors/font_color = Color(1, 0.643137, 0, 1)
text = "D.E.R SMART SYSTEMS Â© 2024"

[node name="Line" type="ColorRect" parent="Margin/UI"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(1, 0.643137, 0, 1)

[node name="PlayerStats" type="VBoxContainer" parent="Margin/UI"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HealthPanel" type="Panel" parent="Margin/UI/PlayerStats"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_bbnp8")

[node name="Margin" type="MarginContainer" parent="Margin/UI/PlayerStats/HealthPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin/UI/PlayerStats/HealthPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Margin/UI/PlayerStats/HealthPanel/Margin/VBox"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_2lt2n")
theme_override_colors/font_color = Color(0.94902, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Health"

[node name="ProgressBar" type="ProgressBar" parent="Margin/UI/PlayerStats/HealthPanel/Margin/VBox"]
texture_filter = 1
custom_minimum_size = Vector2(1050, 50)
layout_mode = 2
theme = ExtResource("3_j2pj4")
rounded = true

[node name="ShieldPanel" type="Panel" parent="Margin/UI/PlayerStats"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_bbnp8")

[node name="Margin" type="MarginContainer" parent="Margin/UI/PlayerStats/ShieldPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin/UI/PlayerStats/ShieldPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Margin/UI/PlayerStats/ShieldPanel/Margin/VBox"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_2lt2n")
theme_override_colors/font_color = Color(0, 0.611765, 0.87451, 1)
theme_override_font_sizes/font_size = 45
text = "Shield"

[node name="ProgressBar" type="ProgressBar" parent="Margin/UI/PlayerStats/ShieldPanel/Margin/VBox"]
texture_filter = 1
custom_minimum_size = Vector2(1050, 50)
layout_mode = 2
theme = ExtResource("4_sjopv")
rounded = true

[node name="Line2" type="ColorRect" parent="Margin/UI"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(1, 0.643137, 0, 1)
